src/objects/Contact_Address__c/Contact_Address__c.object-meta.xml
<CustomObject>
    <label>Contact Address</label>
    <nameField>
        <label>SFDC Row ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>