src/objects/Contact_Address__c/fields/Address_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Phone_Number__c</fullName>
    <inlineHelpText>Work phone for this Contact Add
US &amp; Canada-Enter the 10-digit number starting with the area code
Int&apos;l phone-Enter &apos;+&apos; followed by country code,city code &amp; phone number
DO NOT enter “1”, “0” or “011” before the number / punctuations / extension number</inlineHelpText>
    <label>Address Phone Number</label>
    <type>Phone</type>
</CustomField>