src/objects/Contact_Address__c/fields/City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Name__c</fullName>
    <formula>upper( Reporting_City_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Name</label>
    <type>Text</type>
</CustomField>