src/objects/Contact_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact Status should not be inactive</errorMessage>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Addresses</relationshipLabel>
    <relationshipName>Contact_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>