src/objects/Contact_Address__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <formula>upper( text(Reporting_Country_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>