src/objects/Contact_Address__c/fields/Is_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A check mark indicates that this address is the Contact&apos;s Primary Address.</inlineHelpText>
    <label>Is Primary Address</label>
    <type>Checkbox</type>
</CustomField>