src/objects/Contact_Address__c/fields/Reporting_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_City_Name__c</fullName>
    <label>Reporting City Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>