src/objects/Contact_Address__c/fields/Reporting_Street_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Street_Address_Line_1__c</fullName>
    <label>Reporting Street Address Line 1</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>