src/objects/Contact_Address__c/fields/Reporting_Street_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Street_Address_Line_3__c</fullName>
    <label>Reporting Street Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>