src/objects/Contact_Address__c/validationRules/Restriction_on_changing_existing_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_on_changing_existing_records</fullName>
    <active>false</active>
    <errorConditionFormula>AND( not(or(CONTAINS($Profile.Name, &apos;API&apos;),CONTAINS($Profile.Name, &apos;Admin&apos;), Contact__r.RecordTypeId =$Label.Honeywell_Employee_Recordtype)),or(ischanged(Id),ischanged(Address_Type__c),ischanged(Contact__c),ischanged(Reporting_Address_Postal_Code__c),ischanged(Reporting_Address_State_Code__c),ischanged(Reporting_City_Name__c),ischanged(Reporting_Country_Name__c),ischanged(Reporting_Street_Address_Line_1__c),ischanged(Reporting_Street_Address_Line_2__c)))</errorConditionFormula>
    <errorMessage>Only API User or SFDC Admins can change contact records</errorMessage>
</ValidationRule>